crates/keron-lang/tests/corpus/errors/check/for_loop_var_shadows_param.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `x` is already defined as a parameter in this scope
  --> 3:7
  |
3 |   for x in xs { reconcile x }
  |       ^
